package com.cpz.processingtemplate.interfaces;

public interface Parametros {
}
