package com.cpz.processingtemplate.view.dto;

import com.cpz.processingtemplate.interfaces.Parametros;

/**
 * @author CPZ
 */
public record ParametrosElipse(float x, float y, float d, int c) implements Parametros {

}
